# thunder-ultrasound

./: README.md
CPU incremental/CPU/: file_io.cpp  file_io.h  gui.cpp  gui.h  holger_time.h  main.c  main.cpp  reconstruction.c  reconstruction.cpp  reconstruction.h  ultrasound_simulator.cpp  utils.cpp  utils.h
CPU/CPU/: gui.c  holger_time.h  main.c  reconstruction.c  utils.c  utils.h
GPU incremental optimized/source_tree/: CMakeLists.txt  file_io.cpp  file_io.h  global_const.h  gui.cpp  holger_time.cpp  holger_time.h  kernels.ocl  main.cpp  ray_casting.cpp  ray_casting.h  reconstruction.cpp  reconstruction.h  reconstruction_adv.cpp  ultrasound_simulator.cpp  ultrasound_simulator.h  utils.cpp  utils.h
GPU incremental optimized/source_tree/inc/NVIDIA/: vector_math.h  vector_types.h
GPU incremental optimized/source_tree/lib/OpenCL/Win32/: OpenCL.lib
GPU incremental optimized/source_tree/lib/OpenCL/x64/: OpenCL.lib
GPU optimized/source_tree/: CMakeLists.txt  file_io.cpp  file_io.h  global_const.h  gui.cpp  gui.h  input_sets.h  kernels.ocl  main.cpp  ray_casting.cpp  ray_casting.h  reconstruction.cpp  reconstruction.h  utils.cpp
GPU optimized/source_tree/lib/OpenCL/x64/: OpenCL.lib
Report/: fastmake.cmd  literature.bib  make.cmd  report.tex  slowmake.cmd
Report/graphics/: bilinear.odg  command_queues.odg  cover.ppt  cover_graphic.pdn  cubic_interpolation.odg  execution_model.odg  memory_model.odg  non-inc_pnn.odg  non-inc_vnn.odg  platform_model.odg  probe.pdn  signature.pdn  titlepage.odp  trace_intersections.odg  tracking_scanning_interpolation.odg  ultrasound_principle.odg  virtual_timetag.odg
Report/text/: abbreviations.tex  abstract.tex  acknowledgements.tex  problem_description.tex
Report/text/gpgpu/: intro.tex  (+2 more)
Simple test input/Lines/: lines.mhd  lines.msk  lines.pos  lines.tim
(+40 files in other folders)
